[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/map_creation/Region.gd" type="Script" id=1]

[node name="Region" type="Node2D" groups=[
"server",
]]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
